--- a/style.css
+++ b/style.css
@@ -112,3 +112,109 @@ footer{
     font-size: 14px;
     margin-bottom: 30px;
 }
+
+.overlay-content{
+    position: fixed;
+    z-index: 10;
+    background-color: #fff;
+    margin: 20px;
+    margin-top: 150px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 317px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.overlay-text{
+    font-size: 24px;
+    text-align: center;
+}
+
+.closebtn{
+    border: 3px solid #6665DD;
+    background-color: #473BF0;
+    padding: 17px 25px;
+    color: #fff;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.overlay{
+    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    z-index: 10;
+    backdrop-filter: blur(4px);
+    width: 100%;
+    height: 100%;
+}
+
+
+
+/*Gallery*/
+
+  
+  .card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10vmin;
+    overflow: hidden;
+    transform: skew(5deg);
+  }
+  .card-container .card {
+    flex: 1;
+    transition: all 1s ease-in-out;
+    height: 75vmin;
+    position: relative;
+  }
+  .card-container .card .card__head {
+    color: black;
+    background: rgba(255, 30, 173, 0.75);
+    padding: 0.5em;
+    transform: rotate(-90deg);
+    transform-origin: 0% 0%;
+    transition: all 0.5s ease-in-out;
+    min-width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 1em;
+    white-space: nowrap;
+  }
+  .card-container .card:hover {
+    flex-grow: 10;
+  }
+  .card-container .card:hover img {
+    filter: grayscale(0);
+  }
+  .card-container .card:hover .card__head {
+    text-align: center;
+    top: calc(100% - 2em);
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    font-size: 1.20em;
+    transform: rotate(0deg) skew(-5deg);
+  }
+  .card-container .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 1s ease-in-out;
+    filter: grayscale(100%);
+  }
+  .card-container .card:not(:nth-child(5)) {
+    margin-right: 1em;
+  }
+
+  .regular-inst{
+    font-size: 30px;
+    text-align: center;
+  }
+
+  span{
+    font-size: 18px;
+  }
+
